bison-parser/examples/ill_typed/bad4.sa
module X
 c : clock;	
 [a?] true -> ;
 [a!] true @ c -> ;
endmodule